# gmock_test

./: CMakeLists.txt  CMakeUserPresets.json  calculate.cpp  calculate.h  conanfile.py  conanfile.txt.bck  main  main.cpp
main.dSYM/Contents/Resources/DWARF/: main
scripts/: build.sh  run.sh
